# topsbi

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py  train.py  validation.py
examples/: ctq8_5.0.yml  ctq8_quad.yml  sm_quad.yml
examples/features/: README.md  config.yml
examples/training/: README.md  ctq8_0.1.yml  ctq8_1.0.yml  ctq8_5.0.yml  ctq8_quad.yml  parameterized.yml  sm_quad.yml  stitched.yml
examples/validation/: config.yml  ctq8_-5.0.yml  ctq8_0.1.yml  ctq8_1.0.yml
model/: net.py
src/topsbi/: train.py  validation.py
src/topsbi/tools/: buildLikelihood.py  data.py  metrics.py  plots.py
tools/: buildLikelihood.py  data.py  metrics.py  plots.py
topsbi/model/: net.py
topsbi/tools/: buildLikelihood.py  data.py  metrics.py  plots.py
