[project]
name = "topsbi"
authors = [
    { name = "C. Eddie McGrady", email = "cmcgrad2@nd.edu"}
]
version = "0.1.0"
description = "learning density ratio estimates for effective field theories"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "awkward>=2.10.0",
    "coffea>=2026.7.0",
    "dill>=0.4.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "torch>=2.13.0",
    "xrootd>=6.1.0",
]
